<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_apps_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_app_name">Spotify Streamer</string>
    <string name="scores_app_name">Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="build_bigger_app_name">Build It Bigger App</string>
    <string name="reader_app_name">XYZ Reader</string>
    <string name="capstone_app_name">Capstone: My Own App</string>
</resources>
