<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/my_apps_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/my_apps_title"
        android:textSize="24sp"
        android:textColor="@color/primary_text_default_material_light"
        android:paddingBottom="50dp"
        android:gravity="center_horizontal" />

    <Button
        style="@style/UdacityButton"
        android:id="@+id/spotify_button"
        android:layout_below="@+id/my_apps_title"
        android:text="@string/spotify_streamer_app_name" />

    <Button
        android:id="@+id/scores_button"
        android:layout_below="@+id/spotify_button"
        android:text="@string/scores_app_name"
        style="@style/UdacityButton" />

    <Button
        style="@style/UdacityButton"
        android:id="@+id/library_button"
        android:layout_below="@+id/scores_button"
        android:text="@string/library_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/build_button"
        android:layout_below="@+id/library_button"
        android:text="@string/build_bigger_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/reader_button"
        android:layout_below="@+id/build_button"
        android:text="@string/reader_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/reader_button"
        android:text="@string/capstone_app_name"
        android:textColor="#FFFFFF"
        android:background="@color/capstone_red"/>

</RelativeLayout>
